# FastAPI-Poetry-structure

./: README.md  pyproject.toml
etl/: .env  main.py
etl/api/app/routers/: default.py
etl/api/core/: config.py
